@@ -2,7 +2,7 @@ name = Stanford Paragraph Types Dynamic
 description = Dynamic paragraph item using block reference and views.
 core = 7.x
 package = Stanford
-version = 7.x-1.4
+version = 7.x-1.5
 dependencies[] = blockreference
 dependencies[] = features
 dependencies[] = field_group
