@@ -2,7 +2,7 @@ name = Stanford Paragraph Types Two Columns
 description = A Stanford Paragraph type that displays text in two columns
 core = 7.x
 package = Stanford
-version = 7.x-1.4
+version = 7.x-1.5
 dependencies[] = ctools
 dependencies[] = features
 dependencies[] = field_group
