@@ -2,7 +2,7 @@ name = Stanford Paragraph Types
 description = A collection of commonly used paragraph types
 core = 7.x
 package = Stanford
-version = 7.x-1.4
+version = 7.x-1.5
 dependencies[] = better_formats
 dependencies[] = blockreference
 dependencies[] = ctools
